Added pac-man like intermission if grid gets cleared.  Added isFemale property to Ball.  Added new class Heart for animation.  Added new simplified Ball2 class for intermission animation.

--- a/confetti.css
+++ b/confetti.css
@@ -26,6 +26,7 @@
 }
 .glitter-front {
     background-image: url("100back.png");
+    z-index: 2;
 }
 .glitter-back {
     background-image: url("100front.png");
